--- a/portfolio.html
+++ b/portfolio.html
@@ -18,20 +18,22 @@
         <div class="container page-header-container">
             <a class="link logo logo-header" href="index.html" lang="en">Web<span class="logo-second">Studio</span></a>
             <nav class="nav-header">
-                <ul class="nav-list list">
-                    <li class="nav-list-item"><a class="link link-nav " href="index.html">Студия</a></li>
-                    <li class="nav-list-item"><a class="link link-nav current" href="portfolio.html">Портфолио</a></li>
-                    <li class="nav-list-item"><a class="link link-nav " href="">Контакты</a></li>
+                <ul class="menu list">
+                    <li class="menu__item"><a class="link menu__link-nav " href="index.html">Студия</a></li>
+                    <li class="menu__item"><a class="link menu__link-nav current" href="portfolio.html">Портфолио</a></li>
+                    <li class="menu__item"><a class="link menu__link-nav " href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contacn-list list">
-                <li class="contact-mail"><a class="link link-nav contact-header-link" href="mailto:info@devstudio.com">
-                        <svg class="contact-header-icon" width="16" height="12">
+            <ul class="contact list">
+                <li class="contact__mail"><a class="link contact__link-nav contact__header-link"
+                        href="mailto:info@devstudio.com">
+                        <svg class="contact__header-icon" width="16" height="12">
                             <use href="./images/icone.svg#envelope"></use>
                         </svg>
                         info@devstudio.com</a></li>
-                <li class="contact-phone-number"><a class="link link-nav contact-header-link" href="tel:+380961111111">
-                        <svg class="contact-header-icon" width="10" height="16">
+                <li class="contact__phone-number"><a class="link contact__link-nav contact__header-link"
+                        href="tel:+380961111111">
+                        <svg class="contact__header-icon" width="10" height="16">
                             <use href="./images/icone.svg#smartphone"></use>
                         </svg>
                         +38 096 111 11 11</a></li>
@@ -189,59 +191,60 @@
                             class="second-logo-footer">Studio</span></a>
                     <address>
                         <ul class="address list">
-                            <li class="contact-footer">
-                                <a class="link address-link" href="https://goo.gl/maps/YywnYqMMY18rzYBH6" target="_blank"
+                            <li class="address__contact-footer">
+                                <a class="link address__link" href="https://goo.gl/maps/YywnYqMMY18rzYBH6" target="_blank"
                                     rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
                             </li>
-                            <li class="contact-mail-footer contact-footer">
-                                <a class="link contact-link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+                            <li class="address__contact-mail-footer contact-footer">
+                                <a class="link address__contact-link" href="mailto:info@devstudio.com"
+                                    lang="en">info@devstudio.com</a>
                             </li>
-                            <li class="contact-phone-number contact-footer"><a class="link contact-link"
+                            <li class="address__contact-phone-number contact-footer"><a class="link address__contact-link"
                                     href="tel:+380961111111">+38 096 111 11 11</a></li>
                         </ul>
                     </address>
                 </div>
                 <div class="social-list-conteiner">
-                    <h3 class="join">присоединяйтесь</h3>
+                    <p class="join">присоединяйтесь</p>
                     <ul class="social-list-footer">
-                        <li class=" list socisl-list-item-footer">
-                            <a href="" class="socisl-list-link-footer">
-                                <svg class="socisl-list-icone-footer" width="20" height="20">
+                        <li class=" list socisl-list-footer__item">
+                            <a href="" class="socisl-list-footer__link">
+                                <svg class="socisl-list-footer__icone" width="20" height="20">
                                     <use href="./images/icone.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class=" list socisl-list-item-footer">
-                            <a href="" class="socisl-list-link-footer">
-                                <svg class="socisl-list-icone-footer" width="20" height="20">
+                        <li class=" list socisl-list-footer__item">
+                            <a href="" class="socisl-list-footer__link">
+                                <svg class="socisl-list-footer__icone" width="20" height="20">
                                     <use href="./images/icone.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class=" list socisl-list-item-footer">
-                            <a href="" class="socisl-list-link-footer">
-                                <svg class="socisl-list-icone-footer" width="20" height="20">
+                        <li class=" list socisl-list-footer__item">
+                            <a href="" class="socisl-list-footer__link">
+                                <svg class="socisl-list-footer__icone" width="20" height="20">
                                     <use href="./images/icone.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class=" list socisl-list-item-footer">
-                            <a href="" class="socisl-list-link-footer">
-                                <svg class="socisl-list-icone-footer" width="20" height="20">
+                        <li class=" list socisl-list-footer__item">
+                            <a href="" class="socisl-list-footer__link">
+                                <svg class="socisl-list-footer__icone" width="20" height="20">
                                     <use href="./images/icone.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <div class="form-footer">
-                    <p class="form-footer-head">Підпишіться на розсилку</p>
+                <div class="form-footer-container">
+                    <p class="form-footer-container__head">Підпишіться на розсилку</p>
                     <form class="footer-form">
-                        <label class="fooret-form-field">
-                            <input type="email" name="user-email" placeholder="E-mail" class="footer-form-input" required>
+                        <label class="fooret-form__field">
+                            <input type="email" name="user-email" placeholder="E-mail" class="footer-form__input" required>
                         </label>
-                        <button type="submit" class="footer-form-btn">Підписатися
-                            <svg class="footer-icon-btn" width="24px" height="24px">
+                        <button type="submit" class="footer-form__btn">Підписатися
+                            <svg class="footer-form__icon-btn" width="24px" height="24px">
                                 <use href="./images/icone.svg#icon-send"></use>
                             </svg>
                         </button>
