--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,15 @@
     </header>
     <!====MAIN====>
     <main>
-        <section class="filter section">
+        <section class="section">
             <div class="container">
-              <h1 class="filter-titel visually-hidden">Фильтр</h1>
-        <ul class="filter-list list">
-            <li class="filter-item"><button class="filter-btn" type="button">Все</button> 
-            <li class="filter-item"><button class="filter-btn" type="button">Веб-сайты</button>
-            <li class="filter-item"><button class="filter-btn" type="button">Приложения</button>
-            <li class="filter-item"><button class="filter-btn" type="button">Дизайн</button>
-            <li class="filter-item"><button class="filter-btn" type="button">Маркетинг</button>
+              <h1 class="filter__titel visually-hidden">Фильтр</h1>
+        <ul class="filter list">
+            <li class="filter__item"><button class="filter__btn" type="button">Все</button> 
+            <li class="filter__item"><button class="filter__btn" type="button">Веб-сайты</button>
+            <li class="filter__item"><button class="filter__btn" type="button">Приложения</button>
+            <li class="filter__item"><button class="filter__btn" type="button">Дизайн</button>
+            <li class="filter__item"><button class="filter__btn" type="button">Маркетинг</button>
         </ul>
             <ul class="work-example-list list">
                 <li class="work-example-title">
