--- a/portfolio.html
+++ b/portfolio.html
@@ -52,130 +52,136 @@
             <li class="filter__item"><button class="filter__btn" type="button">Дизайн</button>
             <li class="filter__item"><button class="filter__btn" type="button">Маркетинг</button>
         </ul>
-            <ul class="work-example-list list">
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+            <ul class="work-example list">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 1.jpg" alt="ноутбук" width="370" height="294">  
-                            <p class="overlay-portfolio">
+                            <p class="work-example__overlay">
                                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>                    
-                        <div class="work-example-text">   
-                            <h2 class="example-title">Технокряк</h2>
-                            <p class="example-text">Веб-сайт</p>
+                        <div class="work-example__container">   
+                            <h2 class="work-example__title">Технокряк</h2>
+                            <p class="work-example__text">Веб-сайт</p>
                         </div>
                     </a>                    
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 2.jpg" alt="баскетбол" width="370" height="294">
-                            <p class="overlay-portfolio">
+                            <p class="work-example__overlay">
                                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>    
-                        <div class="work-example-text">   
-                            <h2 class="example-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="example-text">Дизайн</p>
+                        <div class="work-example__container">   
+                            <h2 class="work-example__title">Постер New Orlean vs Golden Star</h2>
+                        <p class="work-example__text">Дизайн</p>
                         </div> 
                     </a>              
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 3.jpg" alt="рыба" width="370" height="294">
-                            <p class="overlay-portfolio">
+                            <p class="work-example__overlay">
                                 Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>    
-                        <div class="work-example-text">
-                            <h2 class="example-title">Ресторан Seafood</h2>
-                            <p class="example-text">Приложение</p>
+                        <div class="work-example__container">
+                            <h2 class="work-example__title">Ресторан Seafood</h2>
+                            <p class="work-example__text">Приложение</p>
                         </div>   
                     </a>                                        
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 4.jpg" alt="наушники" width="370" height="294">
-                            <p class="overlay-portfolio">
-                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                            <p class="work-example__overlay">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>
-                    <div class="work-example-text">
-                    <h2 class="example-title">Проект Prime</h2>
-                    <p class="example-text">Маркетинг</p>
+                    <div class="work-example__container">
+                    <h2 class="work-example__title">Проект Prime</h2>
+                    <p class="work-example__text">Маркетинг</p>
                     </div>   
                     </a>                                        
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 5.jpg" alt="коробки" width="370" height="294">
-                            <p class="overlay-portfolio">
-                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                            <p class="work-example__overlay">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>
-                    <div class="work-example-text">
-                    <h2 class="example-title">Проект Boxes</h2>
-                    <p class="example-text">Приложение</p>  
+                    <div class="work-example__container">
+                    <h2 class="work-example__title">Проект Boxes</h2>
+                    <p class="work-example__text">Приложение</p>  
                     </div>
                     </a>                                        
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 6.jpg" alt="монитор" width="370" height="294">
-                            <p class="overlay-portfolio">
-                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                            <p class="work-example__overlay">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>
-                    <div class="work-example-text">
-                    <h2 class="example-title">Inspiration has no Borders</h2>
-                    <p class="example-text">Веб-сайт</p>    
+                    <div class="work-example__container">
+                    <h2 class="work-example__title">Inspiration has no Borders</h2>
+                    <p class="work-example__text">Веб-сайт</p>    
                     </div> 
                     </a>                                       
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 7.jpg" alt="книга" width="370" height="294">
-                            <p class="overlay-portfolio">
-                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                            <p class="work-example__overlay">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>
-                    <div class="work-example-text">
-                    <h2 class="example-title">Издание Limited Edition</h2>
-                    <p class="example-text">Дизайн</p>  
+                    <div class="work-example__container">
+                    <h2 class="work-example__title">Издание Limited Edition</h2>
+                    <p class="work-example__text">Дизайн</p>  
                     </div>
                     </a>                                       
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 8.jpg" alt="лейба" width="370" height="294">
-                            <p class="overlay-portfolio">
-                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                            <p class="work-example__overlay">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>
-                    <div class="work-example-text">
-                    <h2 class="example-title">Проект LAB</h2>
-                    <p class="example-text">Маркетинг</p>   
+                    <div class="work-example__container">
+                    <h2 class="work-example__title">Проект LAB</h2>
+                    <p class="work-example__text">Маркетинг</p>   
                     </div> 
                     </a>                                       
                 </li>
-                <li class="work-example-title">
-                    <a class="link work-example-link work-link-wrapper" href="">
-                        <div class="work-example-wrapper">
+                <li class="work-example__item">
+                    <a class="link work-example__link work-example__link-wrapper" href="">
+                        <div class="work-example__wrapper">
                             <img src="./images/project 9.jpg" alt="работа с ноутбуком" width="370" height="294">
-                            <p class="overlay-portfolio">
-                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                            <p class="work-example__overlay">
+                                Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.
                             </p>
                         </div>
-                    <div class="work-example-text">
-                    <h2 class="example-title">Growing Business</h2>
-                    <p class="example-text">Приложение</p>  
+                    <div class="work-example__container">
+                    <h2 class="work-example__title">Growing Business</h2>
+                    <p class="work-example__text">Приложение</p>  
                     </div>
                     </a>                                        
                 </li>
