--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       </section>
       <section class="clients">
         <div class="container">
-          <h2 class="clients-title">Постоянные клиенты</h2>
+          <h2 class="clients-title title">Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="list clients-item">
               <a href="" class="clients-link">
