--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
   <body>
     <!====HEADER====>
     <header class="page-header">
-      <div class="container page-header-container">
-        <a class="link logo logo-header" href="index.html" lang="en">Web<span class="logo-second" >Studio</span></a>
+      <div class="container page-header__container">
+        <a class="link logo page-header__logo" href="index.html" lang="en">Web<span class="logo__second" >Studio</span></a>
       <nav class="nav-header">
         <ul class="menu list">
-          <li class="menu__item"><a class="link menu__link-nav current" href="index.html">Студия</a></li>
-          <li class="menu__item"><a class="link menu__link-nav " href="portfolio.html">Портфолио</a></li>
-          <li class="menu__item"><a class="link menu__link-nav " href="">Контакты</a></li>
+          <li class="menu__item"><a class="link menu__link  menu__link__current" href="index.html">Студия</a></li>
+          <li class="menu__item"><a class="link menu__link " href="portfolio.html">Портфолио</a></li>
+          <li class="menu__item"><a class="link menu__link " href="">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contact list">
-        <li class="contact__mail"><a class="link contact__link-nav contact__header-link" href="mailto:info@devstudio.com">
-          <svg class="contact__header-icon" width="16" height="12">
+        <li class="contact__mail"><a class="link contact__link" href="mailto:info@devstudio.com">
+          <svg class="contact__icon" width="16" height="12">
             <use href="./images/icone.svg#envelope"></use>
           </svg>
           info@devstudio.com</a></li>
-        <li class="contact__phone-number"><a class="link contact__link-nav contact__header-link" href="tel:+380961111111">
-          <svg class="contact__header-icon" width="10" height="16">
+        <li class="contact__phone-number"><a class="link contact__link" href="tel:+380961111111">
+          <svg class="contact__icon" width="10" height="16">
             <use href="./images/icone.svg#smartphone"></use>
           </svg>
           +38 096 111 11 11</a></li>
@@ -51,20 +51,20 @@
       </section>
       <section class="section">
         <div class="container">
-            <h2 class="teams-pluses visually-hidden">Наши отличия</h2>
-        <ul class="teams-pluses-list list">
-          <li class="teams-pluses-item">
-          <div class="pluses-icon-conteiner">
-            <svg class="pluses-icon" width="70px" height="70">
+            <h2 class="section__title visually-hidden">Наши отличия</h2>
+        <ul class="section__list list">
+          <li class="section__item">
+          <div class="section__container">
+            <svg class="section__container_icon" width="70px" height="70">
               <use href="./images/icone.svg#antenna"></use>
             </svg>
           </div>
             <h3 class="pluses-title">Внимание к деталям</h3>
             <p class="plusses-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
-          <li class="teams-pluses-item">
-          <div class="pluses-icon-conteiner">
-            <svg class="pluses-icon" width="70px" height="70">
+          <li class="section__item">
+          <div class="section__container">
+            <svg class="section__container_icon" width="70px" height="70">
               <use href="./images/icone.svg#clock"></use>
             </svg>
           </div>            
@@ -73,9 +73,9 @@
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li class="teams-pluses-item">
-          <div class="pluses-icon-conteiner">
-            <svg class="pluses-icon" width="70px" height="70">
+          <li class="section__item">
+          <div class="section__container">
+            <svg class="section__container_icon" width="70px" height="70">
               <use href="./images/icone.svg#diagram"></use>
             </svg>
           </div>            
@@ -84,9 +84,9 @@
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li class="teams-pluses-item">
-            <div class="pluses-icon-conteiner">
-              <svg class="pluses-icon" width="70px" height="70">
+          <li class="section__item">
+            <div class="section__container">
+              <svg class="section__container_icon" width="70px" height="70">
               <use href="./images/icone.svg#astronaut"></use>
             </svg>
             </div>
@@ -276,7 +276,7 @@
         </ul>
         </div>        
       </section>
-      <section class="clients">
+      <section class="clients section">
         <div class="container">
           <h2 class="clients-title title">Постоянные клиенты</h2>
           <ul class="clients-list">
