--- a/portfolio.html
+++ b/portfolio.html
@@ -15,25 +15,24 @@
 <body>
     <!====HEADER====>
     <header class="page-header">
-        <div class="container page-header-container">
-            <a class="link logo logo-header" href="index.html" lang="en">Web<span class="logo-second">Studio</span></a>
+        <div class="container page-header__container">
+            <a class="link logo page-header__logo" href="index.html" lang="en">Web<span
+                    class="logo__second">Studio</span></a>
             <nav class="nav-header">
                 <ul class="menu list">
-                    <li class="menu__item"><a class="link menu__link-nav " href="index.html">Студия</a></li>
-                    <li class="menu__item"><a class="link menu__link-nav current" href="portfolio.html">Портфолио</a></li>
-                    <li class="menu__item"><a class="link menu__link-nav " href="">Контакты</a></li>
+                    <li class="menu__item"><a class="link menu__link" href="index.html">Студия</a></li>
+                    <li class="menu__item"><a class="link menu__link menu__link__current" href="portfolio.html">Портфолио</a></li>
+                    <li class="menu__item"><a class="link menu__link" href="">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="contact list">
-                <li class="contact__mail"><a class="link contact__link-nav contact__header-link"
-                        href="mailto:info@devstudio.com">
-                        <svg class="contact__header-icon" width="16" height="12">
+                <li class="contact__mail"><a class="link contact__link" href="mailto:info@devstudio.com">
+                        <svg class="contact__icon" width="16" height="12">
                             <use href="./images/icone.svg#envelope"></use>
                         </svg>
                         info@devstudio.com</a></li>
-                <li class="contact__phone-number"><a class="link contact__link-nav contact__header-link"
-                        href="tel:+380961111111">
-                        <svg class="contact__header-icon" width="10" height="16">
+                <li class="contact__phone-number"><a class="link contact__link" href="tel:+380961111111">
+                        <svg class="contact__icon" width="10" height="16">
                             <use href="./images/icone.svg#smartphone"></use>
                         </svg>
                         +38 096 111 11 11</a></li>
@@ -44,7 +43,7 @@
     <main>
         <section class="section">
             <div class="container">
-              <h1 class="filter__titel visually-hidden">Фильтр</h1>
+              <h1 class="section__titel visually-hidden">Фильтр</h1>
         <ul class="filter list">
             <li class="filter__item"><button class="filter__btn" type="button">Все</button> 
             <li class="filter__item"><button class="filter__btn" type="button">Веб-сайты</button>
